--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(54, 62, 70);
 }
 
-h1 {
+header {
     background-color: black;
     color: white;
     text-align: center;
