--- a/style.css
+++ b/style.css
@@ -18,3 +18,10 @@ ul{
     margin: 0;
     padding: 0;
 }
+.resource-card {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 8px;
+}
