--- a/style.css
+++ b/style.css
@@ -21,9 +21,15 @@ ul{
 .resource-card {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
+    
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 8px;
-    width: 30%;
+
     display: inline-block;
+    width: 30%;
+    vertical-align: top;
+    box-sizing: border-box;
 }
+
+
