--- a/style.css
+++ b/style.css
@@ -1,35 +1,73 @@
 body {
-    background-color: rgb(54, 62, 70);
+    box-sizing: border-box;
+    margin: 0;
+    min-height: 100vh;
+    
+    background-image: linear-gradient(to bottom right, #090A1A, #344E89, #a0c4ff);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-header {
-    background-color: black;
+h2 {
+    margin: 20px 65px;
+}
+
+p {
+    margin: 20px 40px;
+}
+
+.navbar {
+    background-color: rgba(141, 144, 227, 0.3); 
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 0px 20px;
+    border-radius: 20px;
+    margin: 35px 70px;
+
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(39, 48, 177, 0.5);
+}
+
+.websiteName {
     color: white;
-    text-align: center;
-
-    padding-top: 8px;
-    padding-bottom: 8px;
-
-    border-radius: 8px;
+    cursor: pointer;
 }
 
-ul{
+ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+
+    display: flex;
 }
+
+ul li a {
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+ul li a:hover {
+    background-color: #5c6dcc;
+    border-radius: 20px;
+} 
+
 .resource-card {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     
-    margin-bottom: 10px;
+    margin: 10px;
+
     padding: 10px;
     border-radius: 8px;
 
-    display: inline-block;
-    width: 30%;
+    display: grid;
+    width: 33%;
     vertical-align: top;
     box-sizing: border-box;
 }
-
 
