--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@ p {
     cursor: pointer;
 }
 
+.highlights {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 40px;
+    gap: 20px;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -74,6 +82,7 @@ ul li a:hover {
     min-height: 180px;
     background-color: rgba(141, 144, 227, 0.25);
     color: white;
+    
     border-radius: 12px;
     padding: 20px;
     border: 1px solid rgba(255, 255, 255, 0.25);
