--- a/style.css
+++ b/style.css
@@ -171,33 +171,24 @@ ul li a:hover {
 }
 
 @media (max-width: 768px) {
-
-    #resourceList {
-        flex-direction: column;
-        align-items: center;
-    }
-
     .resource-card {
-        width: 90%;
-        max-width: none;
-        padding: 20px;
-        min-height: 180px;
+        flex: 0 0 280px;
     }
-
+    
     .navbar {
         margin: 15px;
         flex-direction: column;
         padding: 10px;
     }
-
+    
     h2 {
         margin: 20px 10px;
     }
-
+    
     p {
         margin: 20px 10px;
     }
-
+    
     ul {
         justify-content: center;
         width: 100%;
